# adventofcode

./: .gitignore  .pre-commit-config.yaml  README.md
2015/csharp/day1/: Program.cs
2015/go/: day1.go  day2.go  go.mod
2015/js/: day1.js
2015/js-solutions/: day1.js  day1.ts  package-lock.json
2015/python/: day1.py  day2.py  day3.py  day4.py  day5.py
2015/rust-solutions/day1/src/: main.rs
2015/rust/day1/src/: main.rs
2015/zig-solutions/: day1.zig
aoc2015/: mix.exs
aoc2015/lib/: day1.ex
elixir/aoc2015/lib/: aoc2015.ex  day1.ex
py/: memray-flamegraph-output.html  pyproject.toml
py/aoc2015/: day1.py  day2.py  day3.py  day4.py
py/tests/aoc2015/: test_day1.py  test_day2.py  test_day3.py  test_day4.py
